// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion rendering renders an item with interactive content 1`] = `
<DocumentFragment>
  <div
    class="css-15twc3j"
    data-cy="accordion"
  >
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-1nin987"
        data-cy="accordionItemTitle accordionItemTitle.danger"
      >
        <button
          aria-controls="customId-content"
          aria-expanded="false"
          class="css-odh0fh"
          data-cy="accordionItemTitle-button"
          type="button"
        >
          <div
            tabindex="-1"
          />
        </button>
        <span
          class="css-1nhhn1w"
          data-cy="accordionItemTitleInner"
        >
          <span
            class="css-1321nl5"
          >
            <svg
              aria-label="system-triangle-right icon"
              class="css-jbdp75"
              data-cy="icon"
              height="16"
              preserveAspectRatio="xMinYMin meet"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <use
                xlink:href="#system-triangle-right"
              />
            </svg>
          </span>
          <span
            class="css-bleycz"
          >
            <h3
              class="css-fmvpil"
              data-cy="accordionItemTitle-heading"
              id="customId-heading"
            >
              Panel 1
            </h3>
            <button
              id="interaction"
              style="pointer-events: all;"
            >
              test
            </button>
          </span>
        </span>
      </div>
      <div
        aria-labelledby="customId-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="customId-content"
      >
        Content 1
      </div>
    </div>
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-1nin987"
        data-cy="accordionItemTitle accordionItemTitle.danger"
      >
        <button
          aria-controls="accordionItem-:r8:-content"
          aria-expanded="false"
          class="css-odh0fh"
          data-cy="accordionItemTitle-button"
          type="button"
        >
          <div
            tabindex="-1"
          />
        </button>
        <span
          class="css-1nhhn1w"
          data-cy="accordionItemTitleInner"
        >
          <span
            class="css-1321nl5"
          >
            <svg
              aria-label="system-triangle-right icon"
              class="css-jbdp75"
              data-cy="icon"
              height="16"
              preserveAspectRatio="xMinYMin meet"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <use
                xlink:href="#system-triangle-right"
              />
            </svg>
          </span>
          <span
            class="css-bleycz"
          >
            <h3
              id="accordionItem-:r8:-heading"
            >
              Panel 1
            </h3>
            <button
              id="interaction"
              style="pointer-events: all;"
            >
              test
            </button>
            <button
              aria-controls="accordionItem-:r8:-content"
              aria-expanded="false"
              id="toggle"
              style="pointer-events: all;"
            >
              toggle
            </button>
          </span>
        </span>
      </div>
      <div
        aria-labelledby="accordionItem-:r8:-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="accordionItem-:r8:-content"
      >
        Content 2
      </div>
    </div>
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-cf9h7f"
        data-cy="accordionItemTitle accordionItemTitle.disabled"
      >
        <button
          aria-controls="accordionItem-:ra:-content"
          aria-expanded="false"
          class="css-1tjctub"
          data-cy="accordionItemTitle-button"
          disabled=""
          type="button"
        >
          <div
            tabindex="-1"
          />
        </button>
        <span
          class="css-1nhhn1w"
          data-cy="accordionItemTitleInner"
        >
          <span
            class="css-1321nl5"
          >
            <svg
              aria-label="system-triangle-right icon"
              class="css-jbdp75"
              data-cy="icon"
              height="16"
              preserveAspectRatio="xMinYMin meet"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <use
                xlink:href="#system-triangle-right"
              />
            </svg>
          </span>
          <span
            class="css-bleycz"
          >
            <h3
              class="css-fmvpil"
              data-cy="accordionItemTitle-heading"
              id="accordionItem-:ra:-heading"
            >
              Panel 1
            </h3>
            <button
              id="interaction"
              style="pointer-events: all;"
            >
              test
            </button>
          </span>
        </span>
      </div>
      <div
        aria-labelledby="accordionItem-:ra:-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="accordionItem-:ra:-content"
      >
        Content 1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion rendering renders with expanded items 1`] = `
<DocumentFragment>
  <div
    class="css-15twc3j"
    data-cy="accordion"
  >
    <div
      data-cy="accordionItem accordionItem.expanded"
    >
      <div
        class="css-duvnlo"
        data-cy="accordionItemTitle"
      >
        <h3
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="panel1-heading"
        >
          <button
            aria-controls="panel1-content"
            aria-expanded="false"
            class="css-1gh59q1"
            data-cy="accordionItemTitle-button"
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-down icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-down"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 1
                </span>
              </span>
            </div>
          </button>
        </h3>
      </div>
      <div
        aria-labelledby="panel1-heading"
        class="css-72kisv"
        data-cy="accordionItemContent"
        id="panel1-content"
      >
        Content 1
      </div>
    </div>
    <div
      data-cy="accordionItem accordionItem.expanded"
    >
      <div
        class="css-duvnlo"
        data-cy="accordionItemTitle"
      >
        <h3
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="panel2-heading"
        >
          <button
            aria-controls="panel2-content"
            aria-expanded="false"
            class="css-1gh59q1"
            data-cy="accordionItemTitle-button"
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-down icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-down"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 2
                </span>
              </span>
            </div>
          </button>
        </h3>
      </div>
      <div
        aria-labelledby="panel2-heading"
        class="css-72kisv"
        data-cy="accordionItemContent"
        id="panel2-content"
      >
        Content 2
      </div>
    </div>
    <div
      data-cy="accordionItem accordionItem.expanded"
    >
      <div
        class="css-duvnlo"
        data-cy="accordionItemTitle"
      >
        <h3
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="panel3-heading"
        >
          <button
            aria-controls="panel3-content"
            aria-expanded="false"
            class="css-1gh59q1"
            data-cy="accordionItemTitle-button"
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-down icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-down"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 3
                </span>
              </span>
            </div>
          </button>
        </h3>
      </div>
      <div
        aria-labelledby="panel3-heading"
        class="css-72kisv"
        data-cy="accordionItemContent"
        id="panel3-content"
      >
        Content 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion rendering renders with no expanded items 1`] = `
<DocumentFragment>
  <div
    class="css-15twc3j"
    data-cy="accordion"
  >
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-1nin987"
        data-cy="accordionItemTitle accordionItemTitle.danger"
      >
        <h3
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="customId-heading"
        >
          <button
            aria-controls="customId-content"
            aria-expanded="false"
            class="css-1gh59q1"
            data-cy="accordionItemTitle-button"
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-right icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-right"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 1
                </span>
              </span>
            </div>
          </button>
        </h3>
      </div>
      <div
        aria-labelledby="customId-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="customId-content"
      >
        Content 1
      </div>
    </div>
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-cf9h7f"
        data-cy="accordionItemTitle accordionItemTitle.disabled"
      >
        <h3
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="accordionItem-:r2:-heading"
        >
          <button
            aria-controls="accordionItem-:r2:-content"
            aria-expanded="false"
            class="css-1l66126"
            data-cy="accordionItemTitle-button"
            disabled=""
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-right icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-right"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 2
                </span>
              </span>
            </div>
          </button>
        </h3>
      </div>
      <div
        aria-labelledby="accordionItem-:r2:-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="accordionItem-:r2:-content"
      >
        Content 2
      </div>
    </div>
    <div
      data-cy="accordionItem"
    >
      <div
        class="css-1uett59"
        data-cy="accordionItemTitle"
      >
        <h2
          class="css-fmvpil"
          data-cy="accordionItemTitle-heading"
          id="accordionItem-:r4:-heading"
        >
          <button
            aria-controls="accordionItem-:r4:-content"
            aria-expanded="false"
            class="css-1gh59q1"
            data-cy="accordionItemTitle-button"
            type="button"
          >
            <div
              tabindex="-1"
            >
              <span
                class="css-13atth2"
                data-cy="accordionItemTitleInner"
              >
                <span
                  class="css-1321nl5"
                >
                  <svg
                    aria-label="system-triangle-right icon"
                    class="css-jbdp75"
                    data-cy="icon"
                    height="16"
                    preserveAspectRatio="xMinYMin meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <use
                      xlink:href="#system-triangle-right"
                    />
                  </svg>
                </span>
                <span
                  class="css-bleycz"
                >
                  Panel 3
                </span>
              </span>
            </div>
          </button>
        </h2>
      </div>
      <div
        aria-labelledby="accordionItem-:r4:-heading"
        class="css-13hugf8"
        data-cy="accordionItemContent"
        hidden=""
        id="accordionItem-:r4:-content"
      >
        Content 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
